--- a/JS Form/index.htm
+++ b/JS Form/index.htm
@@ -11,49 +11,34 @@
 </head>
 
 <body>
-    <div class="d-flex outer-box container mt-5">
+    <div class="d-flex outer-box container my-5">
         <div class="row">
             <div class="col border border-2 p-4">
                 <h2 class="mt-3">Employee Details</h2>
                 <form method="post">
                     <div class="form-group mt-4">
-                        <label for="name">Name</label>
-                        <input type="name" class="form-control" id="name" aria-describedby="nameHelp" placeholder="Enter name" required>
+                        <label for="name" class="fw-bold">Name*</label>
+                        <input name="name" type="name" class="form-control" id="name" aria-describedby="nameHelp" placeholder="Enter name" onclick="handleTouch(event)" onchange="handleChange(event)" required>
                         <small id="nameValid" class="form-text"></small>
                     </div>
                     <div class="form-group mt-3">
-                        <label for="email">Email address</label>
-                        <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter email" required>
-                        <small id="emailValid" class="form-text text-danger"></small>
+                        <label for="email" class="fw-bold">Email Address*</label>
+                        <input name="email" type="email" class="form-control" id="email" aria-describedby="emailHelp" onclick="handleTouch(event)" onchange="handleChange(event)" placeholder="Enter email" required>
+                        <small id="emailValid"></small>
                     </div>
                     <div class="form-group mt-3">
-                        <label for="mobile">Mobile Number</label>
-                        <input type="number" class="form-control" id="mobile" placeholder="Enter Mobile Number">
+                        <label for="mobile" class="fw-bold">Mobile Number</label>
+                        <input name="mobile" type="number" onclick="handleTouch(event)" class="form-control" id="mobileHelp" onchange="handleChange(event)" placeholder="Enter Mobile Number">
                         <small id="mobileValid" class="form-text"></small>
                     </div>
-                    <button type="submit" class="btn btn-dark mt-2">Submit</button>
+                    <button type="submit" id="submit_button">Submit</button>
                 </form>
             </div>
-            <div class="col  border border-2 p-4">
-                <table class="table table-striped table-bordered">
-                    <thead>
-                        <tr>
-                            <th>Name</th>
-                            <th>Email</th>
-                            <th>Mob No.</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>Shivam</td>
-                            <td>shivam.yadav@geminisolutions.com</td>
-                            <td>7007723257</td>
-                        </tr>
-                    </tbody>
-                </table>
+            <div class="col border border-2 p-4" id="output-box">
             </div>
         </div>
     </div>
+    <script src="server.js"></script>
 </body>
 
 </html>
